# SLM-Finetuning-RAG

./: .gitattributes  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
configs/ingest/: pdfs_config.json
data/finetuning/qa/: synthetic_QAs.json  uniqueQA_dataset0.7.jsonl
data/finetuning/text/: text_finetuningData.jsonl
data/resources/: gold_doc_ids.json  keywords_database.json
src/llmrag/: LLM_Model.py  build_gold_docs.py  data_processing.py  efficiency_report.py  finetuning.py  finetuning_evaluation_QAs.py  finetuning_evaluation_text.py  helpers.py  main.py
src/llmrag/eval/rag_eval_b1/: main.py
src/llmrag/eval/rag_eval_b2/: main.py
src/llmrag/eval/rag_eval_ft1/: contamination_audit.py  main.py  retrieval_eval.py
src/llmrag/eval/rag_eval_ft2/: KW_ablation.py  contamination_audit.py  evaluator.py  main.py
src/llmrag/models/emb_model/: README.md  config_sentence_transformers.json  model.safetensors
src/llmrag/pipelines/base_rag1/: chatbot.py  dataset.py  rag_main.py  vectorstore.py
src/llmrag/pipelines/base_rag2/: chatbot.py  finetuned_model.py  rag_main.py  vectorstore.py
src/llmrag/pipelines/ft_1rag/: chatbot.py  rag_main.py
src/llmrag/pipelines/ft_2rag/: chatbot.py  dataset.py  rag_main.py  vectorstore.py
src/llmrag/training/finetuning_embeddmodel/: computation.txt  data_loading.py  embedd_finetuning.py  embedd_main.py  embedding_ft_evaluation.py  eval_main.py  evaluation.py  gpu_training_log.csv  visualizations.py
src/llmrag/training/finetuning_textbooks/: computation.txt  data_loading.py  finetuning_evaluation.py  (+4 more)
(+19 files in other folders)
